--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
  </section>
  <section id="Tercera">
-    <div id="Sobre mí">
+    <div id="sobremi">
         <p>Soy un estudiante de UX/UI design en Ironhack Madrid, complemento estos  nuevos conocimientos con los anteriores en el área de audiovisuales.Me puedes encontrar principalmente haciendo y terminando proyectos para mis clases, suele ser corriendo y a última hora</p>
         <img src="Imágenes portfolio/Headshot.jpg">
     </div>
