--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Diego Carballo</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <header>
     <div data-aos="fade-right">
-        <nav id="Nav superior">
+        <nav id="nav-superior">
             <a href="work.html">Home</a>
             <a href="about.html">About</a>
             <a href="Contact.html">Contact</a>
@@ -26,31 +26,31 @@
                 <h1>Diego Carballo</h1>
                 <h2>Ux/ui Designer</h2>
                 <h2>Ejemplo a seguir</h2>
-                <img src="Imágenes portfolio/Flores portada.jpg" alt="Foto de portada">
+                <img src="imagenes/Flores portada.jpg" alt="Foto de portada">
             </div>
         </section>
     </div>
     <section id="segunda">
-        <div id="Proyectos">
+        <div id="proyectos">
             <h2>Proyectos</h2>
             <div>
                 <h3>Bajoelvolcán</h3>
-                <img src="Imágenes portfolio/bajoelvolcan 4.png" alt="Imágen de la home del ecommerce">
+                <img src="imagenes/bajoelvolcan 4.png" alt="Imágen de la home del ecommerce">
             </div>
           <div>
             <h3>Fintech</h3>
-            <img src="Imágenes portfolio/finanzas .png" alt="Imágen del Fintech">
+            <img src="imagenes/finanzas .png" alt="Imágen del Fintech">
           </div>
           <div>
             <h3>Punto de encuentro Wallapop</h3>
-            <img src="Imágenes portfolio/wallapop ok.png" alt="Imágen de pantalla Wallapop">
+            <img src="imagenes/wallapop ok.png" alt="Imágen de pantalla Wallapop">
           </div>
             </div>
  </section>
- <section id="Tercera">
+ <section id="tercera">
     <div id="sobremi">
         <p>Soy un estudiante de UX/UI design en Ironhack Madrid, complemento estos  nuevos conocimientos con los anteriores en el área de audiovisuales.Me puedes encontrar principalmente haciendo y terminando proyectos para mis clases, suele ser corriendo y a última hora</p>
-        <img src="Imágenes portfolio/Headshot.jpg">
+        <img src="imagenes/Headshot.jpg">
     </div>
  </section>
 </body>
